--- a/TaskMapper/ios/TaskMapper/Base.lproj/LaunchScreen.xib
+++ b/TaskMapper/ios/TaskMapper/Base.lproj/LaunchScreen.xib
@@ -11,30 +11,15 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by React Native" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="695" width="375" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.97647058823529409" green="0.30980392156862746" blue="0.27058823529411763" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="TaskMapperLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="tw5-I2-e8z">
                     <rect key="frame" x="-1241" y="-459" width="240" height="1654"/>
                 </imageView>
-                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IkR-JM-jRu">
-                    <rect key="frame" x="70" y="381" width="275" height="2"/>
-                    <color key="tintColor" red="0.95686274509803926" green="0.21176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
-                </progressView>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="TaskMapperLogo copy.png" translatesAutoresizingMaskIntoConstraints="NO" id="WkE-0o-ZBO">
-                    <rect key="frame" x="-33" y="163" width="500" height="286"/>
-                    <color key="tintColor" red="0.95686274509803926" green="0.21176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" fixedFrame="YES" image="TaskMapperLogo copy" translatesAutoresizingMaskIntoConstraints="NO" id="U2j-os-F7h">
+                    <rect key="frame" x="57" y="79" width="300" height="527"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.094117647058823528" green="0.17254901960784313" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-            </constraints>
+            <color key="backgroundColor" red="1" green="0.24705882352941178" blue="0.23137254901960785" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="tintColor" red="0.95686274510000002" green="0.21176470589999999" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -43,7 +28,7 @@
         </view>
     </objects>
     <resources>
-        <image name="TaskMapperLogo copy.png" width="500" height="286"/>
+        <image name="TaskMapperLogo copy" width="281" height="500"/>
         <image name="TaskMapperLogo.png" width="2895" height="1654"/>
     </resources>
 </document>
